CI fixup: don't use getLast()
method not available for Java17 CI